fixed the delete bookmark warning from bleeding into the donate portion on smaller screens

--- a/src/options_custom/css/main.css
+++ b/src/options_custom/css/main.css
@@ -196,7 +196,7 @@ input {
 #bookmark-option,
 #github-cal,
 #weatherOpt {
-  margin-top: 280px;
+  margin-top: 230px;
 }
 
 .bttn {
